--- a/TableView practice #2/Base.lproj/Main.storyboard
+++ b/TableView practice #2/Base.lproj/Main.storyboard
@@ -1,24 +1,144 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21679"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="TableView_practice__2" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="JzZ-p9-I9o">
+                                <rect key="frame" x="0.0" y="59" width="393" height="759"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cell" id="B5o-ms-P9T" customClass="CountryCell" customModule="TableView_practice__2" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="50" width="393" height="43.666667938232422"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="B5o-ms-P9T" id="qfF-0c-VCU">
+                                            <rect key="frame" x="0.0" y="0.0" width="362.66666666666669" height="43.666667938232422"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NyZ-Cx-nNK">
+                                                    <rect key="frame" x="20" y="11" width="324.66666666666669" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="trailingMargin" secondItem="NyZ-Cx-nNK" secondAttribute="trailing" constant="10" id="4Zw-PA-0ke"/>
+                                                <constraint firstItem="NyZ-Cx-nNK" firstAttribute="leading" secondItem="qfF-0c-VCU" secondAttribute="leadingMargin" id="Hnc-iy-5Nv"/>
+                                                <constraint firstItem="NyZ-Cx-nNK" firstAttribute="top" secondItem="qfF-0c-VCU" secondAttribute="topMargin" id="RAH-xx-3OV"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="item" destination="NyZ-Cx-nNK" id="Nkq-L5-XXu"/>
+                                            <segue destination="JNZ-QL-vSg" kind="show" identifier="toInfo" id="wbO-OW-QWs"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="JzZ-p9-I9o" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="H6c-BL-aGX"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="JzZ-p9-I9o" secondAttribute="trailing" id="Hr2-er-nYd"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="JzZ-p9-I9o" secondAttribute="bottom" id="Zbi-JZ-ktI"/>
+                            <constraint firstItem="JzZ-p9-I9o" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="lNn-vJ-I0b"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="tableView" destination="JzZ-p9-I9o" id="QkE-YE-nfr"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="138" y="4"/>
+        </scene>
+        <!--Info View Controller-->
+        <scene sceneID="4Uf-jp-w7J">
+            <objects>
+                <viewController storyboardIdentifier="InfoViewController" modalPresentationStyle="fullScreen" useStoryboardIdentifierAsRestorationIdentifier="YES" id="JNZ-QL-vSg" customClass="InfoViewController" customModule="TableView_practice__2" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="a0n-gC-hit">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jhj-Hd-V8q">
+                                <rect key="frame" x="146" y="80" width="101" height="54"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Thin" family="Helvetica Neue" pointSize="45"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" text="Country name:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nz4-SS-qlj">
+                                <rect key="frame" x="16" y="202" width="136" height="26"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="26" id="PDL-eP-BG7"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Thin" family="Helvetica Neue" pointSize="22"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pfp-wQ-SCF">
+                                <rect key="frame" x="162" y="202" width="205" height="26"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Thin" family="Helvetica Neue" pointSize="22"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" text="Capital City:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SIV-Ed-bCu">
+                                <rect key="frame" x="16" y="291" width="110" height="26"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Thin" family="Helvetica Neue" pointSize="22"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Sbb-mL-fF7">
+                                <rect key="frame" x="134" y="291" width="249" height="26"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Thin" family="Helvetica Neue" pointSize="22"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="uP4-Se-c4R"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="pfp-wQ-SCF" firstAttribute="leading" secondItem="nz4-SS-qlj" secondAttribute="trailing" constant="10" id="24b-Ee-Qi7"/>
+                            <constraint firstItem="Jhj-Hd-V8q" firstAttribute="centerX" secondItem="a0n-gC-hit" secondAttribute="centerX" id="3ov-M3-9nf"/>
+                            <constraint firstItem="SIV-Ed-bCu" firstAttribute="top" secondItem="nz4-SS-qlj" secondAttribute="bottom" constant="63" id="7RC-FQ-sha"/>
+                            <constraint firstItem="Jhj-Hd-V8q" firstAttribute="top" secondItem="uP4-Se-c4R" secondAttribute="top" constant="80" id="K2G-ZG-hIE"/>
+                            <constraint firstItem="nz4-SS-qlj" firstAttribute="top" secondItem="Jhj-Hd-V8q" secondAttribute="bottom" constant="68" id="MMz-Ld-Hh5"/>
+                            <constraint firstItem="Sbb-mL-fF7" firstAttribute="leading" secondItem="SIV-Ed-bCu" secondAttribute="trailing" constant="8" id="RBq-YK-RSh"/>
+                            <constraint firstItem="nz4-SS-qlj" firstAttribute="leading" secondItem="uP4-Se-c4R" secondAttribute="leading" constant="16" id="YZW-60-aV5"/>
+                            <constraint firstItem="pfp-wQ-SCF" firstAttribute="baseline" secondItem="nz4-SS-qlj" secondAttribute="baseline" id="fCd-Su-xss"/>
+                            <constraint firstItem="uP4-Se-c4R" firstAttribute="trailing" secondItem="Sbb-mL-fF7" secondAttribute="trailing" constant="10" id="hL6-E3-2dw"/>
+                            <constraint firstItem="SIV-Ed-bCu" firstAttribute="leading" secondItem="uP4-Se-c4R" secondAttribute="leading" constant="16" id="n1F-PN-NZV"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="pfp-wQ-SCF" secondAttribute="trailing" constant="10" id="sWd-Im-IjH"/>
+                            <constraint firstItem="Sbb-mL-fF7" firstAttribute="baseline" secondItem="SIV-Ed-bCu" secondAttribute="baseline" id="y3x-Lq-7cY"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="M86-tp-qbC"/>
+                    <connections>
+                        <outlet property="cityNameLabel" destination="Sbb-mL-fF7" id="fXr-Tn-VKj"/>
+                        <outlet property="countryNameLabel" destination="pfp-wQ-SCF" id="fJZ-9s-5Yj"/>
+                        <outlet property="headerLabel" destination="Jhj-Hd-V8q" id="jwT-eR-Mmw"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Wx6-mm-NLQ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="969" y="4"/>
         </scene>
     </scenes>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
